--- a/index.html
+++ b/index.html
@@ -3,9 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/css/style.css">
     <title>Document</title>
 </head>
 <body>
-    
+    <header class="encabezado">
+        <div class="menu">
+            <p class="logo">SunnySide</p>
+            <div class="menu-opt">
+                <a href="">About</a>
+                <a href="">Services</a>
+                <a href="">Projects</a>
+                <a href="">Contact</a>
+            </div>
+        </div>
+    </header>
 </body>
 </html>
