Se crea la primera vista del mail

--- a/index.html
+++ b/index.html
@@ -17,6 +17,42 @@
                 <a href="">Contact</a>
             </div>
         </div>
+        <h1>WE ARE CREATIVE</h1>
     </header>
+    <main>
+        <section class="columna">
+            <div class="content-col">
+                <h2>Transform your brand</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas neque adipisci quo ipsa saepe minus corrupti doloribus, accusantium minima voluptatum blanditiis sed maiores enim! Aspernatur debitis eius voluptatum iure iusto.</p>
+                <p>Lear more</p>
+
+            </div>
+            <div class="img-bg1">
+
+            </div>
+        </section>
+        <section class="columna">
+            <div class="img-bg2">
+
+            </div>
+            <div class="content-col">
+                <h2>Transform your brand</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas neque adipisci quo ipsa saepe minus corrupti doloribus, accusantium minima voluptatum blanditiis sed maiores enim! Aspernatur debitis eius voluptatum iure iusto.</p>
+                <p>Lear more</p>
+
+            </div>
+        </section>
+        <section class="columna">
+            <div class="content-col">
+                <h2>Transform your brand</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas neque adipisci quo ipsa saepe minus corrupti doloribus, accusantium minima voluptatum blanditiis sed maiores enim! Aspernatur debitis eius voluptatum iure iusto.</p>
+                <p>Lear more</p>
+
+            </div>
+            <div class="img-bg3">
+
+            </div>
+        </section>
+    </main>
 </body>
 </html>
