--- a/index.html
+++ b/index.html
@@ -24,33 +24,32 @@
             <div class="content-col">
                 <h2>Transform your brand</h2>
                 <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas neque adipisci quo ipsa saepe minus corrupti doloribus, accusantium minima voluptatum blanditiis sed maiores enim! Aspernatur debitis eius voluptatum iure iusto.</p>
-                <p>Lear more</p>
+                <p class="learn learn-1">Learn more</p>
 
             </div>
-            <div class="img-bg1">
-
-            </div>
-        </section>
-        <section class="columna">
-            <div class="img-bg2">
-
-            </div>
-            <div class="content-col">
-                <h2>Transform your brand</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas neque adipisci quo ipsa saepe minus corrupti doloribus, accusantium minima voluptatum blanditiis sed maiores enim! Aspernatur debitis eius voluptatum iure iusto.</p>
-                <p>Lear more</p>
+            <div class="img-bg img-1">
 
             </div>
         </section>
         <section class="columna">
-            <div class="content-col">
-                <h2>Transform your brand</h2>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas neque adipisci quo ipsa saepe minus corrupti doloribus, accusantium minima voluptatum blanditiis sed maiores enim! Aspernatur debitis eius voluptatum iure iusto.</p>
-                <p>Lear more</p>
+            <div class="img-bg img-2">
 
             </div>
-            <div class="img-bg3">
+            <div class="content-col">
+                <h2>Stand out to the right audience</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas neque adipisci quo ipsa saepe minus corrupti doloribus, accusantium minima voluptatum blanditiis sed maiores enim! Aspernatur debitis eius voluptatum iure iusto.</p>
+                <p class="learn learn-2">Learn more</p>
 
+            </div>
+        </section>
+        <section class="columna">
+            <div class="img-bg img-3 img-cont">
+                <h2>Graphic design</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas neque adipisci quo ipsa saepe minus corrupti doloribus, accusantium minima voluptatum blanditiis sed maiores enim! Aspernatur debitis eius voluptatum iure iusto.</p>
+            </div>
+            <div class="img-bg img-4 img-cont">
+                <h2>Photography</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas neque adipisci quo ipsa saepe minus corrupti doloribus, accusantium minima voluptatum blanditiis sed maiores enim! Aspernatur debitis eius voluptatum iure iusto.</p>
             </div>
         </section>
     </main>
